3.3 section: welcome overflow fix

--- a/Zadanie 3.3/style.css
+++ b/Zadanie 3.3/style.css
@@ -24,6 +24,7 @@ a:active {
 
 body {
   font-family: 'Open Sans', sans-serif;
+  overflow-x: hidden; /* fix to deal with negative horizontal margin in welcome section */
 }
 
 /* Smooth scroll */
@@ -107,6 +108,7 @@ html {
   background-color: rgba(0, 0, 0, .5);
   margin: 120px -500px 120px 0;
   padding: 40px 520px 40px 20px;
+  overflow: hidden;
   float: right;
 }
 
